hphp/test/zend/bad/ext/standard/tests/general_functions/getopt_004.php
<?php
	var_dump(getopt("v::", array("v::")));
?>
